programando la logica de los textos registrarse y iniciar sección

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -226,6 +226,7 @@
         app:layout_constraintGuide_percent="0.59610707" />
 
     <TextView
+        android:id="@+id/textRegistrate"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fontFamily="sans-serif"
