--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -14,17 +14,15 @@
         android:gravity="center|fill_horizontal"
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="3sp"
+        android:text="@string/registro"
         android:textColor="#000000"
-        android:textSize="20sp"
-        android:textStyle="normal"
-        app:autoSizeTextType="uniform"
+        android:textSize="29dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline27"
         app:layout_constraintEnd_toStartOf="@+id/guideline25"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
         app:layout_constraintTop_toTopOf="@+id/guideline26"
-        app:layout_constraintVertical_bias="1.0"
-        tools:text="Registro" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:layout_width="0dp"
@@ -32,7 +30,7 @@
         android:fontFamily="sans-serif"
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="3sp"
-        android:text="Ingresa los siguientes datos"
+        android:text="@string/ingresa_los_siguientes_datos"
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="normal"
@@ -67,21 +65,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.08978675" />
+        app:layout_constraintGuide_percent="0.09" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline27"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.13019079" />
+        app:layout_constraintGuide_percent="0.14" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline28"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.21548821" />
+        app:layout_constraintGuide_percent="0.23" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline29"
@@ -269,7 +267,7 @@
         android:background="@drawable/custom_margen"
         android:fontFamily="sans-serif"
         android:gravity="center|left"
-        android:hint="Correo"
+        android:hint="@string/correo"
         android:inputType="textEmailAddress"
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="6sp"
@@ -337,5 +335,50 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline23"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
         app:layout_constraintTop_toTopOf="@+id/guideline46" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline48"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.88" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline49"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.85" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="right"
+        android:text="@string/ya_tienes_con_una_cuenta"
+        android:textColor="@color/primaryDarkColor"
+        android:textSize="12sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toTopOf="@+id/guideline48"
+        app:layout_constraintEnd_toStartOf="@+id/guideline25"
+        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintStart_toStartOf="@+id/guideline9"
+        app:layout_constraintTop_toTopOf="@+id/guideline49" />
+
+    <TextView
+        android:id="@+id/textIniciar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+        android:text="@string/iniciar_seccion"
+        android:textColor="#038AF6"
+        android:textSize="12sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toTopOf="@+id/guideline48"
+        app:layout_constraintEnd_toStartOf="@+id/guideline23"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/guideline49" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
