creando el splash.xml, creando el Sharedpreferences, el menu donde tiene la opcion de logout y eliminar el Sharedpreferences, se a creado el swich como boton de recordatorio.

--- a/app/src/main/res/drawable/custom_margen.xml
+++ b/app/src/main/res/drawable/custom_margen.xml
@@ -3,5 +3,5 @@
     <solid
         android:color="#e6e9ed"/>
     <corners
-        android:radius="10dp"/>
+        android:radius="10sp"/>
 </shape>
