--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity2">
+    tools:context=".activity.MainActivity2">
 
 
     <TextView
@@ -16,7 +16,7 @@
         android:lineSpacingExtra="3sp"
         android:text="@string/registro"
         android:textColor="#000000"
-        android:textSize="29dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline27"
         app:layout_constraintEnd_toStartOf="@+id/guideline25"
         app:layout_constraintHorizontal_bias="0.0"
@@ -106,6 +106,7 @@
         android:id="@+id/editTextNombre"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autofillHints=""
         android:background="@drawable/custom_margen"
         android:fontFamily="sans-serif"
         android:hint="@string/nombre"
@@ -135,9 +136,10 @@
         android:id="@+id/editTextApellidos"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autofillHints=""
         android:background="@drawable/custom_margen"
         android:fontFamily="sans-serif"
-        android:gravity="center|left"
+        android:gravity="fill_vertical"
         android:hint="@string/apellidos"
         android:inputType="none|text"
         android:letterSpacing="-0.03"
@@ -167,9 +169,10 @@
         android:id="@+id/editTextCedula"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autofillHints=""
         android:background="@drawable/custom_margen"
         android:fontFamily="sans-serif"
-        android:gravity="center|left"
+        android:gravity="fill_horizontal"
         android:hint="@string/cedula"
         android:inputType="none|text"
         android:letterSpacing="-0.03"
@@ -200,9 +203,10 @@
         android:id="@+id/editTextContrasena"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autofillHints=""
         android:background="@drawable/custom_margen"
         android:fontFamily="sans-serif"
-        android:gravity="center|left"
+        android:gravity="fill_vertical"
         android:hint="@string/contrasena"
         android:inputType="textPassword"
         android:letterSpacing="-0.03"
@@ -232,9 +236,10 @@
         android:id="@+id/editTextDireccion"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autofillHints=""
         android:background="@drawable/custom_margen"
         android:fontFamily="sans-serif"
-        android:gravity="center|left"
+        android:gravity="fill_vertical"
         android:hint="@string/direcci_n"
         android:inputType="none|text"
         android:letterSpacing="-0.03"
@@ -264,9 +269,10 @@
         android:id="@+id/editTextCorreo"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autofillHints=""
         android:background="@drawable/custom_margen"
         android:fontFamily="sans-serif"
-        android:gravity="center|left"
+        android:gravity="fill_vertical"
         android:hint="@string/correo"
         android:inputType="textEmailAddress"
         android:letterSpacing="-0.03"
@@ -295,9 +301,10 @@
     <EditText
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autofillHints=""
         android:background="@drawable/custom_margen"
         android:fontFamily="sans-serif"
-        android:gravity="center|left"
+        android:gravity="fill_vertical"
         android:hint="@string/telefono"
         android:inputType="text"
         android:letterSpacing="-0.03"
@@ -355,7 +362,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fontFamily="sans-serif-medium"
-        android:gravity="right"
+        android:gravity="center|right|center_horizontal"
         android:text="@string/ya_tienes_con_una_cuenta"
         android:textColor="@color/primaryDarkColor"
         android:textSize="12sp"
