--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
 
     <ImageView
@@ -48,7 +48,7 @@
         android:fontFamily="sans-serif"
         android:text="@string/email"
         android:textColor="#23253c"
-        android:textSize="15sp"
+        android:textSize="14sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
@@ -56,6 +56,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
     <EditText
+        android:id="@+id/editextEmail"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/custom_margen"
@@ -70,7 +71,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="@+id/guideline8"
-        tools:ignore="TextContrastCheck" />
+        android:importantForAutofill="no" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
@@ -84,14 +85,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.14" />
+        app:layout_constraintGuide_percent="0.12" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.3163017" />
+        app:layout_constraintGuide_percent="0.32" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline7"
@@ -120,7 +121,7 @@
         android:fontFamily="sans-serif"
         android:text="@string/contrase_a"
         android:textColor="#23253c"
-        android:textSize="15sp"
+        android:textSize="14sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
         app:layout_constraintEnd_toStartOf="@+id/guideline13"
@@ -163,7 +164,7 @@
         app:layout_constraintGuide_percent="0.64983165" />
 
     <EditText
-        android:id="@+id/editTextCorreo1"
+        android:id="@+id/editTextPassword"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/custom_margen"
@@ -175,7 +176,8 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline15"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="@+id/guideline14" />
+        app:layout_constraintTop_toTopOf="@+id/guideline14"
+        android:importantForAutofill="no" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline16"
@@ -195,14 +197,16 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fontFamily="sans-serif"
-        android:gravity="center"
+        android:gravity="left"
         android:text="@string/olvido_su_nombre_de_usuario_o_cotrase_a"
         android:textColor="#000000"
         android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline17"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintBottom_toTopOf="@+id/guideline19"
+        app:layout_constraintEnd_toStartOf="@+id/guideline20"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="@+id/guideline16" />
+        app:layout_constraintTop_toTopOf="@+id/guideline18"
+        app:layout_constraintVertical_bias="1.0" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline18"
@@ -223,16 +227,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.59610707" />
+        app:layout_constraintGuide_percent="0.62" />
 
     <TextView
         android:id="@+id/textRegistrate"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fontFamily="sans-serif"
-        android:gravity="center"
+        android:gravity="left"
         android:text="@string/registrate"
-        android:textColor="#038AF6"
+        android:textColor="#1976D2"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline19"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -264,6 +268,21 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="@+id/guideline21" />
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/Switch"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:text="@string/recordar"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline17"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline20"
+        app:layout_constraintTop_toTopOf="@+id/guideline16"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="TouchTargetSizeCheck" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
